--- a/Patrus.cabal
+++ b/Patrus.cabal
@@ -30,14 +30,16 @@ library
     exposed-modules:
         Patrus.Lexer
     hs-source-dirs: src/
-executable Patrus
+    
+executable PatrusMain
+    main-is:          app/main.hs
+    build-depends:    base ^>=4.13.0.0, Patrus
+    build-tool-depends: alex:alex, happy:happy
+    hs-source-dirs:   .
+    default-language: Haskell2010
+    
+executable PatrusLiterate
     main-is:          Patrus.lhs
-
-    -- Modules included in this executable, other than Main.
-    -- other-modules:
-
-    -- LANGUAGE extensions used by modules in this package.
-    -- other-extensions:
     build-depends:    base ^>=4.13.0.0, Patrus
     build-tool-depends: alex:alex, happy:happy
     hs-source-dirs:   .
