--- a/Patrus.cabal
+++ b/Patrus.cabal
@@ -23,7 +23,7 @@ extra-source-files:
     README.md
 
 library
-    build-depends:  base ^>=4.13.0.0
+    build-depends:  base >= 4.13.0.0
                    --Lexer deps
                    ,array >= 0.5.4.0
                    ,mtl >= 2.2.2
@@ -36,21 +36,21 @@ library
 
 executable PatrusMain
     main-is:          app/main.hs
-    build-depends:    base ^>=4.13.0.0, Patrus
+    build-depends:    base >=4.13.0.0, Patrus
     build-tool-depends: alex:alex, happy:happy
     hs-source-dirs:   .
     default-language: Haskell2010
 
 executable PatrusLiterate
     main-is:          Patrus.lhs
-    build-depends:    base ^>=4.13.0.0, Patrus
+    build-depends:    base >=4.13.0.0, Patrus
     build-tool-depends: alex:alex, happy:happy
     hs-source-dirs:   .
     default-language: Haskell2010
 
 executable jloxlexMatch
     main-is:          app/jloxlexMatch.hs
-    build-depends:    base ^>=4.13.0.0, Patrus
+    build-depends:    base >=4.13.0.0, Patrus
     build-tool-depends: alex:alex, happy:happy
     hs-source-dirs:   .
     default-language: Haskell2010
