--- a/Patrus.cabal
+++ b/Patrus.cabal
@@ -26,7 +26,7 @@ library
     build-depends:  base >= 4.13.0.0
                    --Lexer deps
                    ,array >= 0.5.4.0
-                   ,unordered-containers
+                   ,containers
                    ,transformers
                    ,mtl >= 2.2.2
     exposed-modules:
@@ -38,20 +38,6 @@ library
 
 executable PatrusMain
     main-is:          app/main.hs
-    build-depends:    base >=4.13.0.0, Patrus
-    build-tool-depends: alex:alex, happy:happy
-    hs-source-dirs:   .
-    default-language: Haskell2010
-
-executable PatrusLiterate
-    main-is:          Patrus.lhs
-    build-depends:    base >=4.13.0.0, Patrus
-    build-tool-depends: alex:alex, happy:happy
-    hs-source-dirs:   .
-    default-language: Haskell2010
-
-executable jloxlexMatch
-    main-is:          app/jloxlexMatch.hs
     build-depends:    base >=4.13.0.0, Patrus
     build-tool-depends: alex:alex, happy:happy
     hs-source-dirs:   .
