Add ForLoop parsing

--- a/Patrus.cabal
+++ b/Patrus.cabal
@@ -29,6 +29,7 @@ library
                    ,containers
                    ,transformers
                    ,mtl >= 2.2.2
+                   ,extra
     exposed-modules:
         Patrus.Parser
         Patrus.Lexer
