--- a/Patrus.cabal
+++ b/Patrus.cabal
@@ -51,3 +51,21 @@ executable PatrusMain
 source-repository head
     type:   git
     location: https://github.com/adpextwindong/Patrus/
+
+test-suite patrus-test
+    type: exitcode-stdio-1.0
+    main-is: Spec.hs
+    other-modules:
+        Patrus.ParserSpec
+        Paths_Patrus
+    hs-source-dirs:
+        test
+    ghc-options: -threaded -rtsopts -with-rtsopts=-N
+    build-depends:
+        QuickCheck
+       ,base >= 4
+       ,containers
+       ,hspec
+       ,hspec-discover
+       ,Patrus
+    default-language: Haskell2010
