Add 10.2.1 Time native function handling

--- a/Patrus.cabal
+++ b/Patrus.cabal
@@ -30,6 +30,7 @@ library
                    ,transformers
                    ,mtl >= 2.2.2
                    ,extra
+                   ,time
     exposed-modules:
         Patrus.Parser
         Patrus.Lexer
