Port Var/Assignment to evalK and PrintStatment to interpretK

--- a/Patrus.cabal
+++ b/Patrus.cabal
@@ -35,6 +35,7 @@ library
         Patrus.Parser
         Patrus.Lexer
         Patrus.Eval
+        Patrus.EvalK
         Patrus.Eval.PrettyPrinter
         Patrus.Eval.Pure
         Patrus.Environment
