Split Environment into Env&Environment and Add fn call/return to EvalK/InterpretK

--- a/Patrus.cabal
+++ b/Patrus.cabal
@@ -38,7 +38,7 @@ library
         Patrus.EvalK
         Patrus.Eval.PrettyPrinter
         Patrus.Eval.Pure
-        Patrus.Environment
+        Patrus.Env
         Patrus.Types
         Patrus.Interpret
         Patrus
