--- a/Patrus.cabal
+++ b/Patrus.cabal
@@ -31,6 +31,7 @@ library
                    ,mtl >= 2.2.2
                    ,extra
                    ,time
+                   ,string-qq
     exposed-modules:
         Patrus.Parser
         Patrus.Lexer
